[pom] Remove security manager